@@ -3,7 +3,7 @@ cpuinfo chrp_rs6k.cpuinfo
 majors 2.4 2.6
 flavour power4-chrp
 kernel-2.4 kernel-image-2.4.27-power4-chrp
-kernel-2.6 kernel-image-2.6.8-power4
+kernel-2.6 kernel-image-2.6.8-power4-smp
 usable \
   kernel-image-2.4.27-power4-chrp \
   kernel-image-2.4.27-power4-chrp-rs6k \
